--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -18,10 +18,12 @@
   box-sizing: border-box;
 }
 
-body, html {
+body, html, button {
   height: 100%;
   font-family: var(--font-primary);
   scroll-behavior: smooth;
+  font-style: italic;
+  font-weight: 700;
 }
 
 /* ======= TYPOGRAPHY ======= */
