--- a/docs/components/find-your-player.html
+++ b/docs/components/find-your-player.html
@@ -3,11 +3,12 @@
   <header class="w-full py-4 bg-[#0a1721] text-white text-center">
     <h1 class="text-4xl md:text-6xl font-bold">Find your player</h1>
   </header>
+  <!--<div class="flex flex-col justify-center items-center w-full py-0.5 bg-[#0A3981]"></div>-->
 
   <!-- Main Content  -->
   <div class="container bg-[#F6FCDF] mx-auto px-4 md:px-10 py-4 grid grid-cols-1 md:grid-cols-3 gap-6 flex-grow">
     <!-- Left Column -->
-    <div class="md:col-span-1 flex flex-col space-y-4 overflow-y-auto">
+    <div class="md:col-span-1 flex flex-col space-y-4">
       <!-- Input Box -->
       <div class="relative w-full">
         <input
@@ -24,24 +25,24 @@
         <p class="text-xl md:text-2xl font-bold">Or choose your characteristics:</p>
       </div>
       
-      <!-- Dropdowns Container  -->
+      <!-- Dropdowns Container - populated dynamically  -->
       <div id="dropdownsContainer" class="w-full flex flex-col space-y-3"></div>
+       <!-- Find Button  -->
+      <div class="flex justify-center items-center mt-2 md:mt-10">
+        <button id="find-player-button" onclick="handleFindPlayer()" class="px-5 py-4 w-full text-3xl md:text-4xl font-bold text-white bg-black rounded-full shadow-lg hover:bg-gray-800 transition duration-300">
+          Find my player
+        </button>
+      </div>
     </div>
 
     <!-- Right Column -->
     <div class="md:col-span-2 flex flex-col space-y-6">
-      <!-- Find Button  -->
-      <div class="flex justify-center items-center mt-2 md:mt-10">
-        <button id="find-player-button" onclick="handleFindPlayer()" class="px-5 py-4 w-4/5 text-3xl md:text-4xl font-bold text-white bg-black rounded-full shadow-lg hover:bg-gray-800 transition duration-300">
-          Find my player
-        </button>
-      </div>
 
       <!-- Results -->
-      <div id="results-container" class="grid grid-cols-1 md:grid-cols-3 gap-4 px-2 md:px-8">
+      <div id="results-container" class="grid grid-cols-1 md:grid-cols-3 gap-4 px-2 md:px-8 flex flex-wrap h-full place-items-center">
         <!-- Player Result Section: initially hidden -->
 
-        <div id="player-result-1" class="flex justify-center text-center hidden">
+        <!--<div id="player-result-1" class="flex justify-center text-center hidden">
           <a id="player-link-1" href="#" class="transform hover:scale-105 transition-all">
             <img src="assets/icons/tennis-player-silhouette-svgrepo-com-2.svg" alt="Player Icon" class="w-4/5 max-w-xs rounded-lg" />
             <p id="player-name-1">Player 1</p>
@@ -60,7 +61,7 @@
             <img src="assets/icons/tennis-player-silhouette-svgrepo-com-2.svg" alt="Player Icon" class="w-4/5 max-w-xs rounded-lg" />
             <p id="player-name-3">Player 3</p>
           </a>
-        </div>
+        </div>-->
       </div>
     </div>
   </div>
